--- a/index.html
+++ b/index.html
@@ -197,7 +197,6 @@
 						data-control-name="midiIn"
 					>
 						<option value="-1">off</option>
-						<option value="0">Ch 0</option>
 						<option value="1">Ch 1</option>
 						<option value="2">Ch 2</option>
 						<option value="3">Ch 3</option>
@@ -213,9 +212,38 @@
 						<option value="13">Ch 13</option>
 						<option value="14">Ch 14</option>
 						<option value="15">Ch 15</option>
+						<option value="16">Ch 16</option>
 					</select>
 				</div>
+
+                <div class="option">
+                    <label for="midiOut">MIDI Out</label>
+                    <select
+                        id="midiOut"
+                        name="midiOut"
+                        data-control-name="midiOut"
+                    >
+                        <option value="-1">off</option>
+                        <option value="1">Ch 1</option>
+                        <option value="2">Ch 2</option>
+                        <option value="3">Ch 3</option>
+                        <option value="4">Ch 4</option>
+                        <option value="5">Ch 5</option>
+                        <option value="6">Ch 6</option>
+                        <option value="7">Ch 7</option>
+                        <option value="8">Ch 8</option>
+                        <option value="9">Ch 9</option>
+                        <option value="10">Ch 10</option>
+                        <option value="11">Ch 11</option>
+                        <option value="12">Ch 12</option>
+                        <option value="13">Ch 13</option>
+                        <option value="14">Ch 14</option>
+                        <option value="15">Ch 15</option>
+                        <option value="16">Ch 16</option>
+                    </select>
+                </div>
 			</div>
+        </div>
 		</form>
 		<section class="keyboard">
 			<button class="white md" data-note="c1" label="C">
