--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>JSSynth</title>
+		<link rel="preload" href="./style.css" as="style" />
+		<link rel="preload" href="./script.js" as="script" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			rel="preload"
@@ -16,9 +18,6 @@
 			media="print"
 			onload="this.media='all'"
 		/>
-		<link rel="preload" href="./freqs.js" as="script" crossorigin />
-		<link rel="preload" href="./keys.js" as="script" crossorigin />
-		<link rel="preload" href="./style.css" as="style" />
 		<link rel="stylesheet" href="./style.css" type="text/css" />
 		<link rel="manifest" href="./manifest.json" />
 		<link rel="icon" href="./icons/icon.svg" type="image/svg" />
@@ -26,7 +25,7 @@
 		<meta name="theme-color" content="DarkSlateGrey" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<meta name="apple-mobile-web-app-title" content="Hello World" />
+		<meta name="apple-mobile-web-app-title" content="JSSynth" />
 		<meta name="msapplication-TileImage" content="icons/icon-144.png" />
 		<meta name="msapplication-TileImage" content="icons/icon-144.png" />
 		<meta name="msapplication-TileColor" content="DarkSlateGrey" />
