serve font locally

--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>JSSynth</title>
 		<link rel="preload" href="./style.css" as="style" />
-		<link rel="preload" href="./script.js" as="script" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			rel="preload"
-			as="style"
-			href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
-			rel="stylesheet"
-			media="print"
-			onload="this.media='all'"
-		/>
+		<link rel="preload" href="./press-start-2p-latin-400-normal.woff2" as="font" crossorigin />
+		<link rel="preload" href="./script.js" as="script" crossorigin />
 		<link rel="stylesheet" href="./style.css" type="text/css" />
 		<link rel="manifest" href="./manifest.json" />
 		<link rel="icon" href="./icons/icon.svg" type="image/svg" />
