--- a/src/index.html
+++ b/src/index.html
@@ -58,10 +58,14 @@
 					stroke="white"
 					hidden
 				/>
-				<path
+				<rect 
 					id="wave-noise"
-					stroke="white"
-					d="m0,100c0,0 0,-100 100,-100c100,0 100,100 100,100c0,0 0,100 100,100c100,0 100,-100 100,-100"
+					stroke="none"
+					x="0"
+					y="50"
+					width="400"
+					height="100"
+					fill="white"
 				/>
 
 				<line id="adsr-a" x1="0" y1="200" x2="100" y2="0" />
