add signal recorder class

--- a/src/index.html
+++ b/src/index.html
@@ -363,6 +363,9 @@
 			</button>
 		</section>
 
+		<button id="startRec">Start Rec</button>
+		<button id="stopRec">Stop Rec</button>
+
 		<footer>
 			made with &lt;3<br />
 			<a href="https://iamschulz.com/" target="_blank" rel="noopener">
