add skeleton for audio records

--- a/src/index.html
+++ b/src/index.html
@@ -365,6 +365,13 @@
 
 		<button id="startRec">Start Rec</button>
 		<button id="stopRec">Stop Rec</button>
+		<ul id="recordingsList">
+			<template id="recordingTemplate">
+				<li>
+					<audio controls loop></audio>
+				</li>
+			</template>
+		</ul>
 
 		<footer>
 			made with &lt;3<br />
