--- a/src/index.html
+++ b/src/index.html
@@ -363,12 +363,19 @@
 			</button>
 		</section>
 
-		<button id="startRec">Start Rec</button>
-		<button id="stopRec">Stop Rec</button>
+		<section class="recordingControls">
+			<button id="rec" aria-pressed="false">Rec</button>
+			<button id="play" aria-pressed="false">Play</button>
+		</section>
+
 		<ul id="recordingsList">
 			<template id="recordingTemplate">
-				<li>
-					<audio controls loop></audio>
+				<li class="audioTrack">
+					<label aria-label="in point">{<input data-audio-ctrl="in" type="number" value="0.00" min="0.00" step="0.01"></label>
+					<audio controls loop preload="auto"></audio>
+					<label aria-label="out point"><input data-audio-ctrl="out" type="number" value="0.00" min="0.00" step="0.01">}</label>
+					<button data-audio-ctrl="loop" aria-pressed="true">Loop</button>
+					<button data-audio-ctrl="del">Del</button>
 				</li>
 			</template>
 		</ul>
