better record ui

--- a/src/index.html
+++ b/src/index.html
@@ -370,7 +370,7 @@
 
 		<ul id="recordingsList">
 			<template id="recordingTemplate">
-				<li class="audioTrack">
+				<li class="audioTrack" data-ready="false">
 					<label aria-label="in point">{<input data-audio-ctrl="in" type="number" value="0.000" min="0.000" step="0.001"></label>
 					<button class="audioPlay">⏵</button>
 					<div class="audioPlayer">
