--- a/src/index.html
+++ b/src/index.html
@@ -389,9 +389,9 @@
 					<label aria-label="out point"><input data-audio-ctrl="out" type="number" value="0.000" min="0.000" step="0.001">}</label>
 					<button data-audio-ctrl="loop" aria-pressed="true">
 						<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" clip-rule="evenodd" viewBox="0 0 200 200" fill="currentColor">
-							<path d="M0 40 40 0h120l40 40v50l-30 30-30-30V60H60v30L30 60 0 90V40Z"/>
-							<path d="m200 160-40 40H40L0 160v-50l30-30 30 30v30h80v-30l30 30 30-30v50Z"/>
-						</svg>						  
+							<path d="M0 40h20V20h20V0h120v20h20v20h20v40l-30 30-30-30V60H60v30L30 60 0 90V40Z"/>
+							<path d="M200 160h-20v20h-20v20H40v-20H20v-20H0v-40l30-30 30 30v20h80v-30l30 30 30-30v50Z"/>
+						  </svg>						  
 						<span class="sr-only">Loop</span>
 					</button>
 					<button data-audio-ctrl="del">
@@ -404,9 +404,9 @@
 					</button>
 					<button data-audio-ctrl="save">
 						<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" clip-rule="evenodd" viewBox="0 0 200 200" fill="currentColor">
-							<path d="M0 0v200h200V40L160 0h-20v80H20V0H0Z"/>
-							<path d="M40 0h80v60H40z"/>
-						</svg>
+							<path d="M0 0v200h200V20h-20V0h-40v80H30V0H0Z"/>
+							<path d="M50 0h70v60H50z"/>
+						  </svg>						  
 						<span class="sr-only">Save</span>
 					</button>
 				</li>
