add volume slider

--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,19 @@
 
 			<div class="controls-box">
 				<div class="option">
+					<label for="volume">Volume</label>
+					<input
+						name="volume"
+						id="volume"
+						type="range"
+						data-control-name="pitch"
+						min="0"
+						max="99"
+						value="99"
+					/>
+				</div>
+
+				<div class="option">
 					<label for="pitch">Pitch</label>
 					<input
 						name="pitch"
