--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,18 @@
 				<input name="release" id="release" type="range" data-control-name="release" min="0" max="10" step="0.1"
 					value="0" />
 			</div>
+
+			<div class="option">
+				<label for="distort">Distort</label>
+				<input name="distort" id="distort" type="range" data-control-name="distort" min="0" max="500" step="10"
+					value="0" />
+			</div>
+
+			<div class="option">
+				<label for="overdrive">Overdrive</label>
+				<input name="overdrive" id="overdrive" type="range" data-control-name="overdrive" min="0" max="11"
+					step="1" value="0" />
+			</div>
 		</div>
 
 		<div class="controls-box">
