add multiple synths ui

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,11 @@
 		Maybe try Chrome or Firefox?
 	</dialog>
 	<div class="controls-slider">
-
+		<!-- synth controls go here -->
+	</div>
+	<div class="add-remove-synths">
+		<button id="add-synth">Add Synth</button>
+		<button id="remove-synth">Remove Synth</button>
 	</div>
 	<section class="keyboard">
 		<button class="white md" data-note="c0" label="C">
