better update function

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 	<link rel="icon" href="./icons/icon.svg" type="image/svg" />
 	<link rel="apple-touch-icon" href="./icons/icon-192.png" />
 	<meta name="theme-color" content="DarkSlateGrey" />
-	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	<meta name="apple-mobile-web-app-title" content="JSSynth" />
 	<meta name="msapplication-TileImage" content="icons/icon-144.png" />
@@ -44,6 +44,9 @@
 		Sorry.<br />
 		Your Browser can't play sounds with this synth.<br />
 		Maybe try Chrome or Firefox?
+		<div class="buttons">
+			<button class="close">Close</button>
+		</div>
 	</dialog>
 	<div class="controls-slider">
 		<!-- synth controls go here -->
