--- a/src/index.html
+++ b/src/index.html
@@ -196,7 +196,8 @@
 				</div>
 				<label aria-label="out point"><input data-audio-ctrl="out" type="number" value="0.000" min="0.000"
 						step="0.001">}</label>
-				<button data-audio-ctrl="enabled" aria-pressed="true">
+
+				<!--<button data-audio-ctrl="enabled" aria-pressed="true">
 					<svg width="100%" height="100%" viewBox="0 0 220 200" version="1.1"
 						xmlns="http://www.w3.org/2000/svg" fill="currentColor"
 						xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
@@ -209,7 +210,7 @@
 							d="M160,0l0,40l20,0l0,40l20,0l0,40l-20,0l0,40l-20,0l0,40l20,0l0,-20l20,0l0,-40l20,0l0,-80l-20,0l0,-40l-20,0l0,-20l-20,0Z" />
 						<path d="M140,60l20,0l0,80l-20,0l0,-80" />
 					</svg>
-				</button>
+				</button>-->
 				<button data-audio-ctrl="loop" aria-pressed="true">
 					<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" fill-rule="evenodd"
 						stroke-linejoin="round" stroke-miterlimit="2" clip-rule="evenodd" viewBox="0 0 200 200"
