--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,10 @@
 		<!-- synth controls go here -->
 	</div>
 	<div class="add-remove-synths">
+		<button id="prev" aria-label="Previous">&lt;</button>
 		<button id="add-synth">Add Synth</button>
 		<button id="remove-synth">Remove Synth</button>
+		<button id="next" aria-label="Next">&gt;</button>
 	</div>
 	<section class="keyboard">
 		<button class="white md" data-note="c0" label="C">
